making the header for mobile fixed so you cant move it when scrolling on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ header {
 @media only screen and (max-width: 850px) {
   header {
     padding: 0;
+    position: fixed;
+    height: 60px;
   }
 }
 
